--- a/config/index.env
+++ b/config/index.env
@@ -1,1 +1,3 @@
 PORT=5000
+JWT_SECRET=kejnovalitnejno
+MONGO_URL=mongodb+srv://ecommerce:5354431Am@cluster0.l9tuj.azure.mongodb.net/app?retryWrites=true&w=majority
